--- a/hw/misc/Makefile.objs
+++ b/hw/misc/Makefile.objs
@@ -76,5 +76,6 @@ obj-$(CONFIG_PVPANIC) += pvpanic.o
 obj-$(CONFIG_AUX) += auxbus.o
 obj-$(CONFIG_ASPEED_SOC) += aspeed_scu.o aspeed_sdmc.o aspeed_ibt.o
 obj-$(CONFIG_ASPEED_SOC) += aspeed_pwm.o aspeed_lpc.o
+obj-$(CONFIG_DPS310) += dps310.o
 obj-$(CONFIG_MSF2) += msf2-sysreg.o
 obj-$(CONFIG_NRF51_SOC) += nrf51_rng.o
