--- a/Makefile.objs
+++ b/Makefile.objs
@@ -77,6 +77,7 @@ common-obj-y += chardev/
 common-obj-$(CONFIG_SECCOMP) += qemu-seccomp.o
 qemu-seccomp.o-cflags := $(SECCOMP_CFLAGS)
 qemu-seccomp.o-libs := $(SECCOMP_LIBS)
+obj-$(CONFIG_DPS310) += dps310.o
 
 common-obj-$(CONFIG_FDT) += device_tree.o
 
